# claude-anyteam

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: auto-release.yml  ci.yml  release.yml
assets/diagrams/: architecture.mmd
docs/: adding-a-backend.md  app-server-sanity.md  architecture-decision.md  architecture.md  battle-test-report.md  configuration.md  final-review.md  install.md  prior-art.md  protocol-spec.md  releasing.md  research.md  roadmap.md  shim-restart-resilience.md  v7-architecture.md  v7.1-notes.md  v7.2-findings.md  v7.2-notes.md  v7.3-edge-cases.md  v7.3-implementation-notes.md  v7.3-live-acceptance.md  v7.3-session-continuation-codex-angle.md  v7.3-session-continuation.md  validation-report.md
docs/conventions/: visibility-envelopes.md
docs/design/: timers-vs-visibility.md
docs/internal/: architecture-diagram-prompt.md  gemini-build-status.md  gemini-build-team-brief.md  gemini-live-research.md  kimi-build-team-brief.md  kimi-rationale.md  strategic-roadmap.md
docs/internal/installer-onboarding/: code-review.md  live-test-report.md
docs/internal/kimi-integration/: codex-parity-map.md  kimi-runtime.md  kimi-skill-and-agent-research.md  repo-integration-parity-audit.md
docs/internal/known-issues/: agent-spawn-missing-agenttype.md  gemini-agent-spawn-no-tmux-fallback.md  leader-outbound-addressing.md
docs/internal/protocol-rev/: 01-clawclone-findings.md  02-clones-survey.md  03-host-binary-extract.md  04-runtime-trace.md  05-claudeteams-substrate.md  06-prior-art-survey.md  07-protocol-spec.md  08-elegance-and-gaps.md  09-implementation-roadmap.md  10-platform-vision.md
hooks/: session-start.sh
npm/: README.md  package.json
npm/lib/: art.js  detect.js  error-translator.js
references/external-claude-code-re/proto-rev-execution-log/: 00-kickoff.md  cap-matrix-audit.md  d1-validation-final.md  daily-1-arch.md  kimi-peer-dm-investigation.md  m11a-methodology-rescore.md  m13-collision-analysis.md  post-everything-sweep.md  pr27-pre-merge-review.md  routing-log-1.md  sendmessage-flap-diagnosis.md  session-2026-04-28-summary.md  substrate-hot-path-profile.md  worktree-isolation-audit.md
references/external-claude-code-re/prototype-sdk/: README.md  pyproject.toml
references/external-claude-code-re/prototype-sdk/agent_teams_kit/: __init__.py  capabilities.py  events.py  lifecycle.py  messages.py  runner.py  storage.py  team.py  teammate.py
references/external-claude-code-re/prototype-sdk/examples/: deepseek_adapter.py  echo_adapter.py  glm_adapter.py
references/external-claude-code-re/prototype-sdk/tests/: test_capabilities.py  test_lifecycle.py  test_storage.py  test_team_discovery.py  test_teammate.py
schemas/: plan.schema.json  task-complete.schema.json
skills/diagnose/: SKILL.md
skills/help/: SKILL.md
skills/launch-team/: SKILL.md
skills/status/: SKILL.md
src/claude_anyteam/: _debug.py  _theme.py  app_server.py  auth_preflight.py  capabilities.py  capability_manifest.py  cli.py  codex.py  codex_log_bloat.py  config.py  diagnose_cli.py  diagnostics.py  env.py  headless_visibility.py  installer.py  loop.py  messages.py  prompts.py  protocol_io.py  registration.py  schema_validation.py  skill_discovery.py  skills_fragment.py  spawn_shim.py  team_cli.py  visibility_tail.py  watch_inbox.py  wrapper_mcp_diagnostics.py  wrapper_server.py  wrapper_tool_failure.py
src/claude_anyteam/schemas/: __init__.py  capability_manifest.schema.json
src/claude_teams/: _filelock.py  coupling.py  messaging.py  models.py  opencode_client.py  server.py  spawner.py  tasks.py  teams.py  teardown.py  tmux_introspection.py
src/codex_teammate/: __init__.py  app_server.py  cli.py  codex.py  config.py  installer.py  logger.py  loop.py  messages.py  plan_probe.py  prompts.py  protocol_io.py  registration.py  roundtrip_m1.py  schema_validation.py  shutdown_probe.py  smoke.py  spawn_shim.py  wrapper_server.py
tests/: conftest.py  test_app_server_client.py  test_app_server_default.py  test_app_server_initialize_visibility.py  test_app_server_mcp_config.py  test_app_server_phase2.py  test_app_server_process_group.py  test_auth_preflight_classifier.py  test_capability_declarations.py  test_capability_manifest_ablation.py  test_capability_prewarm.py  test_capability_validation.py  test_checkpoint_commit.py  test_checkpoint_timeout_e2e.py  test_claim_race.py  test_claude_native_backend.py  test_codex_event_fifo.py  test_codex_event_matching.py  test_codex_invocation_shape.py  test_codex_log_bloat.py  test_codex_mcp_config.py  test_codex_startup_visibility.py  test_cross_backend_skills_integration.py  test_cross_impl_envelope_contract.py  test_diagnose_cli.py  test_error_translator.js  test_filelock_timeout.py  test_fix_forward.py  test_fork_dispatch.py  test_gemini_acp_prompt_flow.py  test_gemini_acp_recovery.py  test_gemini_effort.py  test_gemini_invoke.py  test_gemini_loop_session_policy.py  test_gemini_next_turn_steer.py  test_inbox_contention.py  test_inbox_guard.py  test_install_command.py  test_kimi_effort.py  test_kimi_invocation_shape.py  (+41 more)
tests/fixtures/installer/: README.md  claude-cli-not-found.txt  claude-plugin-marketplace-failed.txt  conda-interference.txt  kimi-not-found.txt  kimi-not-signed-in.txt  kimi-version-old.txt  macos-arch-mismatch.txt  permission-denied-settings.txt  plugin-update-soft.txt  python-store-stub.txt  read-only-home.txt  settings-json-corrupt.txt  tmux-not-found.txt  uv-cache-permission-denied.txt  uv-corporate-proxy.txt  uv-lock-contention.txt  (+8 more)
tests/protocol/: test_auto_pickup.py  test_messaging.py  test_models.py  test_server_batch_summary.py  test_spawner.py  test_tasks.py  test_teams.py
tests/stress/: test_run_scenario.py  test_score_collab.py  test_score_quality.py  test_score_throughput.py
tools/benchmark/: substrate_hot_path_profile.py
tools/stress/: __init__.py  run_scenario.py  score_collab.py  score_quality.py  score_throughput.py
viewer/: codex-ink-viewer.mjs  package-lock.json  package.json
(+60 files in other folders)
