[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-anyteam"
version = "0.7.1"
description = "Bring Codex, Gemini, and Kimi CLI powered teammates into Claude Code with multi-backend routing."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "pydantic>=2.10",
    # Used directly for the narrowed v7 wrapper MCP server in
    # `claude_anyteam.wrapper_server` and pinned to match the team-protocol
    # implementation's runtime expectations.
    "fastmcp==3.0.0b1",
    # Used by `claude_teams` for the file-based mailbox / config locking
    # that the team protocol relies on.
    "filelock==3.16",
    # v7.2 uses jsonschema to validate `--output-last-message` contents in
    # Python because `codex exec resume` on codex-cli 0.122.0 does not
    # accept `--output-schema`.
    "jsonschema>=4.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-anyteam = "claude_anyteam.cli:main"
claude-anyteam-spawn-shim = "claude_anyteam.spawn_shim:main"
claude-anyteam-wrapper = "claude_anyteam.wrapper_server:main"
gemini-anyteam = "claude_anyteam.backends.gemini.cli:main"
claude-anyteam-gemini = "claude_anyteam.backends.gemini.cli:main"
kimi-anyteam = "claude_anyteam.backends.kimi.cli:main"
claude-anyteam-kimi = "claude_anyteam.backends.kimi.cli:main"
codex-teammate = "claude_anyteam.cli:main"
codex-teammate-spawn-shim = "claude_anyteam.spawn_shim:main"
codex-teammate-wrapper = "claude_anyteam.wrapper_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_anyteam", "src/claude_teams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-m", "not integration"]
markers = [
    "integration: real CLI smoke tests that are skipped by default",
]
