[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-anyteam"
version = "0.8.4"
description = "Bring Codex, Gemini, Kimi, and native Claude CLI powered teammates into Claude Code with multi-backend routing."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "pydantic>=2.10",
    # Used directly for the narrowed v7 wrapper MCP server in
    # `claude_anyteam.wrapper_server` and pinned to match the team-protocol
    # implementation's runtime expectations.
    "fastmcp==3.0.0b1",
    # Transitive of fastmcp / mcp / httpx-sse. Pin below 1.0 explicitly:
    # uv's resolver promoted `httpx==1.0.dev3` into clean tool-venv installs
    # (the dev release satisfies `>=0.27.1`/`>=0.28.1`) and that release
    # removed `httpx.TransportError`, which `httpx-sse` imports. Result:
    # `from fastmcp import FastMCP` raised `AttributeError` at import time,
    # the codex spawn shim crashed inside its tmux pane, and no registration
    # event ever fired — the silent-spawn failure observed in #32. Hold the
    # pin until fastmcp / httpx-sse drop their httpx-1.0 incompatibility.
    "httpx>=0.28,<1.0",
    # Used by `claude_teams` for the file-based mailbox / config locking
    # that the team protocol relies on.
    "filelock==3.16",
    # v7.2 uses jsonschema to validate `--output-last-message` contents in
    # Python because `codex exec resume` on codex-cli 0.122.0 does not
    # accept `--output-schema`.
    "jsonschema>=4.20",
    # Event-driven teammate inbox wakeups: mirrors aproto-codex-bridge's
    # fs.watch-on-inbox-dir pattern with basename filtering.
    "watchfiles>=1.0",
    # Tiny WebSocket projection for `visibility-tail --serve`.
    "websockets>=12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-anyteam = "claude_anyteam.cli:main"
claude-anyteam-spawn-shim = "claude_anyteam.spawn_shim:main"
claude-anyteam-wrapper = "claude_anyteam.wrapper_server:main"
gemini-anyteam = "claude_anyteam.backends.gemini.cli:main"
claude-anyteam-gemini = "claude_anyteam.backends.gemini.cli:main"
kimi-anyteam = "claude_anyteam.backends.kimi.cli:main"
claude-anyteam-kimi = "claude_anyteam.backends.kimi.cli:main"
codex-teammate = "claude_anyteam.cli:main"
codex-teammate-spawn-shim = "claude_anyteam.spawn_shim:main"
codex-teammate-wrapper = "claude_anyteam.wrapper_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_anyteam", "src/claude_teams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ["-m", "not integration"]
markers = [
    "integration: real CLI smoke tests that are skipped by default",
]
